<resources>
    <string name="app_name">General Ledger</string>
    <string name="action_add">Add</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_general_ledger">General Ledger</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="balance">Total balance</string>
    <string name="summary_details">Summary details</string>
    <string name="currency_format">%1$.2f %2$s</string>
    <string name="refresh_label">Refresh</string>
    <string name="error_message_format">%1$s \nPlease refresh again</string>
    <string name="preference_file_key">ledger_shared_preferences</string>
    <string name="transactions_sync_key">key_transaction_sync</string>
    <string name="debit_label">Debit</string>
    <string name="credit_label">Credit</string>
    <string name="balance_format">%1$.2f</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="action_export">Export to CSV</string>
    <string name="cannot_be_empty"><![CDATA[DateTime & Amount cannot be empty]]></string>
    <string name="concat_date_time">%s %s</string>
    <string name="date_format">%d-%02d-%02d</string>
    <string name="time_format">%02d:%02d:%02d</string>
    <string name="exported_csv_file">ledger_transactions.csv</string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
    </string-array>
</resources>